--- a/style.css
+++ b/style.css
@@ -26,3 +26,34 @@
   padding-bottom: 0px;
   padding-top: 30px;
 }
+.list-item {
+  margin-bottom: 10px;
+  padding: 1.5%;
+  border-radius: 0.3rem;
+  background-color: coral;
+  color: coral;
+  text-decoration: none;
+  align-items: center;
+  justify-content: space-between;
+  display: flex;
+  flex-wrap: wrap;
+}
+.align-center {
+  align-items: center;
+}
+.justify-space-between {
+  justify-content: space-between;
+}
+.flex-row {
+  display: flex;
+  flex-wrap: wrap;
+}
+#search-results {
+  display: flex;
+  flex-direction: column;
+  background-color: lightgrey;
+}
+.artistName {
+color: black;
+font-size: larger;
+}
