--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
   display: none;
 }
 
+
 .titleHero{
   display: flex;
   justify-content: space-between;
@@ -52,8 +53,12 @@
   display: flex;
   flex-direction: column;
   background-color: lightgrey;
+  border-radius: 20px;
+  padding: 15px;
 }
 .artistName {
 color: black;
 font-size: larger;
+padding: 20px;
+
 }
