--- a/style.css
+++ b/style.css
@@ -52,8 +52,11 @@
   display: flex;
   flex-direction: column;
   background-color: lightgrey;
+  padding: 20px;
+  border-radius: 20px;
 }
 .artistName {
 color: black;
 font-size: larger;
 }
+
