--- a/style.css
+++ b/style.css
@@ -97,8 +97,12 @@ font-weight: bolder;
   display: flex;
   flex-direction: column;
   background-color: lightgrey;
+  border-radius: 20px;
+  padding: 15px;
 }
 .artistName {
 color: black;
 font-size: larger;
+padding: 20px;
+
 }
